@@ -1,3 +1,8 @@
+2014-12-02  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* configure.ac: Added KPSE_COMPILER_VISIBILITY.
+	* Makefile.am [AM_CFLAGS]: Added $(VISIBILITY_CFLAGS).
+
 2014-10-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	Import cairo-1.14.0.
